# soc-design-ai-copilot

./: .env.example  .gitignore  00_JD_Analysis.md  01_Resume_Gap_Analysis.md  README.md  pyproject.toml
data/: sample_spec.md
demos/: hello_chat.py  hello_hybrid.py  hello_rag.py  test.py
eval/: golden.jsonl  run_faithfulness.py  run_retrieval.py
eval/reports/: faithfulness_report.md  retrieval_report.md
notes/: day01.md  day02.md  day03.md  day04.md  day05.md  day08.md  week1_quiz_review.md  week1_summary.md
plan/: 00_Master_Plan.md  01_Project_Spec.md  02_Week1_Daily_Tasks.md  03_Fitipower_Story_Template.md  04_Interview_QA_Bank.md
src/rag/: chain.py  config.py  ingest.py  retriever.py
src/soc_copilot/: __init__.py  config.py
src/soc_copilot/api/: __init__.py  cli.py  main.py  schemas.py
src/soc_copilot/demos/: __init__.py  hybrid_demo.py  rag_demo.py
src/soc_copilot/eval/: __init__.py  run_faithfulness.py  run_retrieval.py
src/soc_copilot/rag/: __init__.py  chain.py  ingest.py  retriever.py
tests/: test_api.py
